# cpe

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
cpe/: __init__.py  cpe.py
scripts/: README.md  download-cpes-in-jsonl-format.sh  download-cpes-in-plaintext-format.sh
