[tool.poetry]
name = "cpe"
version = "0.3.0"
description = "A simple CPE 2.3 parser"
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
cpe = "cpe.cpe:_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
